[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/BreadButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/HUD.gd" type="Script" id=2]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="GridContainer" type="GridContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -127.0
margin_top = 31.0
margin_right = 127.0
margin_bottom = 123.0

[node name="NextLevelButton" parent="GridContainer" instance=ExtResource( 1 )]
margin_right = 254.0
disabled = true
text = "Next Level"

[node name="RetryButton" parent="GridContainer" instance=ExtResource( 1 )]
margin_top = 48.0
margin_right = 254.0
margin_bottom = 92.0
text = "Retry"

[node name="MessageLabel" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.0
margin_top = -19.0
margin_right = 130.0
margin_bottom = 19.0
text = "Game Over!"
align = 1
valign = 1

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 38.0
text = "0"
align = 1

[connection signal="pressed" from="GridContainer/NextLevelButton" to="." method="_on_NextLevelButton_pressed"]
[connection signal="pressed" from="GridContainer/RetryButton" to="." method="_on_RetryButton_pressed"]
